--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
         }
 
         .guest-id {
+            margin: 0 auto;
             text-align: center;
             position: sticky;
             bottom: 16px;
