--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
 
         .guest-id {
             margin: 0 auto;
+            width: 100px;
             text-align: center;
             position: sticky;
             bottom: 16px;
