--- a/index.html
+++ b/index.html
@@ -234,16 +234,13 @@
             <div v-if="selectedGuest" class="guest-info">
                 <div class="guest-title">
                     <div class="guest-greeting">親愛的 {{ selectedGuest.name }}，歡迎您大駕光臨！</div>
-                    <div class="guest-welcome">好開心您來了～</div>
-                    <div class="guest-welcome">期待您享受這次的聚集！</div>
+                    <div class="guest-welcome">開心您的到來～</div>
+                    <div class="guest-welcome">請盡情享受今晚的喜宴！</div>
                     <div class="guest-welcome">PS, 請一定要來找我們拍照唷！</div>
                 </div>
                 <div class="info-item">
-                    <div class="info-label">桌次編號</div>
+                    <div class="info-label">桌次</div>
                     <div class="info-value">{{ selectedGuest.tableNo }} 桌</div>
-                </div>
-                <div class="info-item">
-                    <div class="info-label">桌次名稱</div>
                     <div class="info-value">{{ selectedGuest.tableAlias }}</div>
                 </div>
                 <div class="info-item">
