--- a/index.html
+++ b/index.html
@@ -233,7 +233,7 @@
             <!-- 單一結果 -->
             <div v-if="selectedGuest" class="guest-info">
                 <div class="guest-title">
-                    <div class="guest-greeting">親愛的 {{ selectedGuest.name }}，歡迎您大駕光臨！</div>
+                    <div class="guest-greeting">親愛的 {{ selectedGuest.name }} 先生/小姐，歡迎您大駕光臨！</div>
                     <div class="guest-welcome">開心您的到來～</div>
                     <div class="guest-welcome">請盡情享受今晚的喜宴！</div>
                     <div class="guest-welcome">PS, 請一定要來找我們拍照唷！</div>
