--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
         { id: 34, name: '林栗誌', tableNo: '4', tableAlias: '喜樂相調二桌', side: '男方親友', needCake: false },
         { id: 35, name: '莊群如', tableNo: '4', tableAlias: '喜樂相調二桌', side: '男方親友', needCake: false },
         { id: 36, name: '神保碧', tableNo: '4', tableAlias: '喜樂相調二桌', side: '男方親友', needCake: false },
-        { id: 37, name: '李裕文', tableNo: '5', tableAlias: '新城媽主管桌', side: '男方親友', needCake: false },
+        { id: 37, name: '林以佳', tableNo: '5', tableAlias: '新城媽主管桌', side: '男方親友', needCake: false },
         { id: 38, name: '李沛庭', tableNo: '5', tableAlias: '新城媽主管桌', side: '男方親友', needCake: false },
         { id: 39, name: '姚盈軒', tableNo: '5', tableAlias: '新城媽主管桌', side: '男方親友', needCake: false },
         { id: 40, name: '王厚忠', tableNo: '5', tableAlias: '新城媽主管桌', side: '男方親友', needCake: false },
@@ -382,7 +382,7 @@
         { id: 129, name: '張明君', tableNo: '14', tableAlias: '新城媽同學桌', side: '男方親友', needCake: false },
         { id: 130, name: '鄭立嘉夫婦', tableNo: '14', tableAlias: '新城媽同學桌', side: '男方親友', needCake: false },
         { id: 132, name: '李美芬夫婦', tableNo: '14', tableAlias: '新城媽同學桌', side: '男方親友', needCake: false },
-        { id: 134, name: '林以佳', tableNo: '14', tableAlias: '新城媽同學桌', side: '男方親友', needCake: false },
+        { id: 134, name: '李裕文', tableNo: '14', tableAlias: '新城媽同學桌', side: '男方親友', needCake: false },
         { id: 135, name: '張翊婷', tableNo: '15', tableAlias: '擋酒桌', side: '男方親友', needCake: false },
         { id: 136, name: '李佳頤', tableNo: '15', tableAlias: '擋酒桌', side: '男方親友', needCake: false },
         { id: 137, name: '樓瑜', tableNo: '15', tableAlias: '擋酒桌', side: '男方親友', needCake: false },
